# vtuber-clipper

./: .gitignore  MILESTONES.md  README.md  architecture.md  changelog.md  interaction-design.md  plan-a-interaction.md  plan-b-effects.md  plan-c-upstream.md  plan-d-m6.md  pyproject.toml  research.md  spec.md
src/clipper/: audio_peaks.py  candidates.py  captions.py  chat.py  chat_peaks.py  config.py  config.toml  download.py  face_track.py  finalize.py  layout.py  main.py  preview_export.py  rank.py  transcribe.py  web.py
src/clipper/effects/: __init__.py  base.py  context.py  emoji_burst.py  hook_card.py  punch_zoom.py  reaction_zoom.py  registry.py
src/clipper/util/: ffmpeg.py  json_io.py  logging.py  peaks.py  ports.py  range_response.py  (+3 more)
tests/: conftest.py  test_atomic_write.py  test_audio_peaks.py  test_candidates.py  test_captions.py  test_captions_window3.py  test_chat.py  test_chat_peaks.py  test_config.py  test_download.py  test_effects_emoji_burst.py  test_effects_hook_card.py  test_effects_punch_zoom.py  test_effects_reaction_zoom.py  test_face_track.py  test_ffmpeg.py  test_finalize.py  test_finalize_effects.py  test_json_io.py  test_layout.py  test_main.py  test_peaks.py  test_ports.py  test_preview_export.py  test_range_response.py  test_rank.py  test_review_state.py  test_slug.py  test_transcribe.py  test_transcript.py  test_web_endpoints.py
tests/fixtures/: audio_peaks.sample.json  chat_peaks.sample.json  chat_stream.sample.jsonl  face_track.sample.json  make_fixture_video.py  ollama_response.json  ranked.sample.json  transcript.sample.json
(+4 files in other folders)
