[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtuber-clipper"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "faster-whisper>=1.0.3",
    # Original chat-downloader is unmaintained (last commit 2023) and broken
    # on Twitch's current GraphQL API. Using community fork with updated hashes.
    "sebastientromp-chat-downloader>=0.2.8",
    "yt-dlp>=2024.10.0",
    "numpy>=1.26",
    "scipy>=1.13",
    "mediapipe>=0.10.14",
    "opencv-python>=4.10",
    "pydantic>=2.8",
    "rich>=13.7",
    "click>=8.1",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "nvidia-cudnn-cu12>=9.0,<10.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-mock>=3.12"]

[project.scripts]
clipper = "clipper.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"clipper" = ["web/*.html", "web/*.css", "web/*.js", "assets/emojis/*.png", "config.toml", "assets/models/*.tflite"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow (deselect with -m 'not slow')"]
